noinst_PROGRAMS=basic killer ex_context cil cascaded_time_queue

LDADD=$(top_builddir)/src/libfiberz.la

AM_CPPFLAGS=-I$(top_srcdir)/include
AM_CXXFLAGS=-std=c++20

basic_SOURCES=basic.cpp
killer_SOURCES=killer.cpp
ex_context_SOURCES=ex_context.cpp
cil_SOURCES=cil.cpp
cascaded_time_queue_SOURCES=cascaded_time_queue.cpp
